alignment fixed

--- a/client/main.css
+++ b/client/main.css
@@ -251,9 +251,9 @@ p {
 .alltask {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     background: #50a3a2;
-    padding: 10px;
+    padding: 2%;
 }
 
 #partitem {
@@ -283,4 +283,8 @@ p {
 
 #taskform {
     transition: all 0.3s ease-out;
+}
+
+.onetask {
+    margin-left: 43%;
 }
